# Sugarscape

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: main.py
src/sugarscape/: __init__.py  agents.py  animate.py  model.py  schedulers.py  utils.py  viz.py
src/sugarscape.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_model_smoke.py  test_utils.py
